--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -4,4 +4,8 @@
     <string name="text_cadastro"><u>Clique aqui para se registrar</u></string>
     <string name="title_cadastro">Cadastre-se</string>
     <string name="deslogar">Deslogar</string>
+    <string name="selecionar_idioma">Selecione o idioma de destino</string>
+    <string name="tv_take_photo">Tirar foto</string>
+    <string name="tv_description">Selecione uma imagem prévia ou tire uma foto</string>
+    <string name="tv_placeholder">Object detection demo</string>
 </resources>
