--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,5 @@
     <string name="tv_take_photo">Tirar foto</string>
     <string name="tv_description">Selecione uma imagem prévia ou tire uma foto</string>
     <string name="tv_placeholder">Object detection demo</string>
+    <string name="text_foto">Foto de Perfil</string>
 </resources>
